Minor fixes: autofocus in form&  overflow in dashboard

--- a/static/css/dashboard.css
+++ b/static/css/dashboard.css
@@ -64,6 +64,14 @@ body {
     font-size: smaller;
 }
 
+.table thead th {
+    height: 1cm;
+}
+
+.table .empty {
+    border-bottom: None;
+}
+
 .asteriskField {
     display: none;
 }
@@ -161,13 +169,15 @@ body {
 }
 
 /* Hide scrollbar for Chrome, Safari and Opera */
+/* .card_g::-webkit-scrollbar, */
 .postx::-webkit-scrollbar,
 .taskx::-webkit-scrollbar,
-.chart_container {
+.chart_container::-webkit-scrollbar {
     display: none;
 }
 
 /* Hide scrollbar for IE, Edge and Firefox */
+/* .card_g, */
 .postx,
 .taskx,
 .chart_container {
@@ -239,6 +249,10 @@ body {
         display: block;
     }
 
+    .taskx {
+        width: 99.5%;
+    }
+
     .container_x {
         width: auto;
     }
@@ -280,3 +294,8 @@ body {
         margin-bottom: 5%;
     }
 }
+
+/*
+search for location of custom class in bash eg 
+$ grep -rnw . -e 'container_x'
+*/
